<resources>
    <string name="app_name">VAV Diary</string>
    <string name="diary">Diary</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="nameTag">Name tag</string>
    <string name="hello_blank_fragment">fix</string>
    <string name="header">Header</string>
    <string name="type_smth...">Type smth...</string>
    <string name="send">Send</string>
    <string name="copy_data_of_past_n_days">Copy data of past N days</string>
    <string name="copy_data">Copy data</string>
    <string name="save_location">Save location</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="copied">Copied!</string>
    <string name="you_was_here">You was here</string>
    <string name="at">at</string>
    <string name="logged_out">You are logged out</string>
    <string name="this_login_already_exists">This login already exists</string>
    <string name="location_error"></string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="void_post">Void</string>
    <string name="no_name">Sent post without header</string>
    <string name="number_of_events">Number of events</string>
    <string name="clear">Clear</string>
    <string name="log_out">Log out</string>
    <string name="sashavav">Sashavav</string>
    <string name="last">last</string>
    <string name="days">Days</string>
    <string name="find">Find</string>
    <string name="remind_me_in">Remind me every</string>
    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string name="reminder_1_min">minute</string>
    <string name="reminder_1_hour">hour</string>
    <string name="reminder_1_day">day</string>
    <string name="reminder_1_week">week</string>
    <string name="reminder_never">year</string>
    <string-array name="reminders">
        <item>@string/reminder_1_min</item>
        <item>@string/reminder_1_hour</item>
        <item>@string/reminder_1_day</item>
        <item>@string/reminder_1_week</item>
        <item>@string/reminder_never</item>
    </string-array>
    <string name="send_notifications">Send notifications</string>
    <string name="header_notification">Save info</string>
    <string name="text_notification">You asked to remind you</string>
    <string name="you_will_receive_notification_every">Next notification in</string>
    <string name="we_wont_send_notifications_again">We won\'t send notifications again</string>
    <string name="lorem_ipsum">
        a
        \n\n
        lot
        \n\n
        of
        \n\n
        text
        \n\n
        are
        \n\n
        here
        \n\n
        because
        \n\n
        i
        \n\n
        need
        \n\n
        this
        \n\n
        a
        \n\n
        lot
    </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>