<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    android:background="@color/backgroundColor"
    tools:context=".Pages.PostSettingsFragment">
    <LinearLayout
        android:gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/returnButton"
            style="@style/returnIcon">
        </ImageButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_location">
                </TextView>
                <CheckBox
                    android:checked="true"
                    android:id="@+id/saveLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </CheckBox>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_notifications">
                </TextView>
                <CheckBox
                    android:checked="true"
                    android:id="@+id/sendNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </CheckBox>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/sendButton"
                style="@style/button1"
                android:text="@string/send">
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>